<resources>
    <string name="app_name">Calculator</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Calculator</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Standard</string>
    <string name="menu_gallery">Scientific</string>
    <string name="menu_slideshow">Mortgage</string>
    <string name="menu_tools">Currency</string>
    <string name="menu_share">Length</string>
    <string name="menu_send">Area</string>

    <string name="menu_volume">Volume</string>
    <string name="menu_temperature">Temperature</string>
    <string name="menu_speed">Speed</string>
    <string name="menu_time">Time</string>
    <string name="menu_mass">Mass</string>
</resources>
