<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.calculator.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.calculator.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.calculator.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.example.calculator.ui.tools.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/nav_share"
        android:name="com.example.calculator.ui.share.ShareFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/nav_send"
        android:name="com.example.calculator.ui.send.SendFragment"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_send" />

    <fragment
        android:id="@+id/nav_volume"
        android:name="com.example.calculator.ui.volume.VolumeFragment"
        android:label="@string/menu_volume"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_temperature"
        android:name="com.example.calculator.ui.temperature.TemperatureFragment"
        android:label="@string/menu_temperature"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_speed"
        android:name="com.example.calculator.ui.speed.SpeedFragment"
        android:label="@string/menu_speed"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_time"
        android:name="com.example.calculator.ui.time.TimeFragment"
        android:label="@string/menu_time"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/nav_mass"
        android:name="com.example.calculator.ui.mass.MassFragment"
        android:label="@string/menu_mass"
        tools:layout="@layout/fragment_send" />

</navigation>